[gd_scene load_steps=28 format=3 uid="uid://cgeav2ppu7wk6"]

[ext_resource type="Script" path="res://data/scripts/Background.gd" id="1_3b14r"]
[ext_resource type="Script" path="res://data/screens/Game.gd" id="1_3h3cr"]
[ext_resource type="Script" path="res://data/scripts/Character.gd" id="2_pxp0g"]
[ext_resource type="Texture2D" uid="uid://bmt36sbtf6t71" path="res://data/dew/bg.png" id="2_tysam"]
[ext_resource type="Texture2D" uid="uid://bar66g3cwdh14" path="res://data/jirou/player.png" id="3_qoit2"]
[ext_resource type="Texture2D" uid="uid://cmaeabyiajdxn" path="res://data/skip/lights.png" id="4_fsobx"]
[ext_resource type="Script" path="res://data/scripts/Enemy.gd" id="4_g1kf2"]
[ext_resource type="Texture2D" uid="uid://br06gg1l7bmvr" path="res://data/skip/stars.png" id="5_6bams"]
[ext_resource type="Texture2D" uid="uid://cdkjmwhsx7w0p" path="res://data/dew/rain.png" id="6_5e1dh"]
[ext_resource type="AudioStream" uid="uid://ckcpxklakr3xx" path="res://data/sfx/jirouJump.wav" id="8_g2jou"]
[ext_resource type="AudioStream" uid="uid://bb0f10wernc6r" path="res://data/sfx/hawkScreech.wav" id="9_wcmdw"]
[ext_resource type="Texture2D" uid="uid://dg5qp8qxp4vdw" path="res://data/jirou/raven.png" id="10_37r02"]
[ext_resource type="Texture2D" uid="uid://byskbse6frj6r" path="res://data/jirou/frog.png" id="10_ccw57"]
[ext_resource type="Script" path="res://data/scripts/Frog.gd" id="10_is4re"]
[ext_resource type="AudioStream" uid="uid://cepuv7t60qq4f" path="res://data/sfx/collectFrog.wav" id="10_kuxtf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5p4bl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnrqv"]
size = Vector2(1597, 41)

[sub_resource type="Animation" id="Animation_df5tr"]
resource_name = "Duck"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(234, 118), Vector2(234, 118)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, 29), Vector2(25, 29)]
}

[sub_resource type="Animation" id="Animation_86yvx"]
resource_name = "EnemyMove"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2]
}

[sub_resource type="Animation" id="Animation_oe8r8"]
resource_name = "FrogHop"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_x8ftf"]
resource_name = "Jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 9, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(179, 210), Vector2(179, 210)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8.5, -19), Vector2(8.5, -19)]
}

[sub_resource type="Animation" id="Animation_5g04o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_fi8w4"]
resource_name = "Run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(142, 210), Vector2(142, 210)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(27, -19), Vector2(27, -19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_txlgl"]
_data = {
"Duck": SubResource("Animation_df5tr"),
"EnemyMove": SubResource("Animation_86yvx"),
"FrogHop": SubResource("Animation_oe8r8"),
"Jump": SubResource("Animation_x8ftf"),
"RESET": SubResource("Animation_5g04o"),
"Run": SubResource("Animation_fi8w4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrp34"]
size = Vector2(142, 210)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7lb6"]
size = Vector2(129, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_il8dh"]
size = Vector2(64, 65)

[node name="Game" type="Node2D"]
script = ExtResource("1_3h3cr")

[node name="Backgrounds" type="Node2D" parent="."]
script = ExtResource("1_3b14r")
speed = 250

[node name="Background1" type="Sprite2D" parent="Backgrounds"]
texture_filter = 1
position = Vector2(400, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("2_tysam")

[node name="Background2" type="Sprite2D" parent="Backgrounds"]
texture_filter = 1
position = Vector2(1200, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("2_tysam")

[node name="Lights1" type="Sprite2D" parent="Backgrounds"]
visible = false
position = Vector2(400, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("4_fsobx")
hframes = 9

[node name="Lights2" type="Sprite2D" parent="Backgrounds"]
visible = false
position = Vector2(1200, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("4_fsobx")
hframes = 9

[node name="Stars1" type="Sprite2D" parent="Backgrounds"]
visible = false
position = Vector2(400, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("5_6bams")
hframes = 13

[node name="Stars2" type="Sprite2D" parent="Backgrounds"]
visible = false
position = Vector2(1200, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("5_6bams")
hframes = 13

[node name="Rain1" type="Sprite2D" parent="Backgrounds"]
visible = false
z_index = 5
position = Vector2(400, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("6_5e1dh")
hframes = 4

[node name="Rain2" type="Sprite2D" parent="Backgrounds"]
visible = false
z_index = 5
position = Vector2(1200, 225)
scale = Vector2(2.778, 2.778)
texture = ExtResource("6_5e1dh")
hframes = 4

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 451)
collision_priority = 99.0
physics_material_override = SubResource("PhysicsMaterial_5p4bl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(798.5, -39.5)
shape = SubResource("RectangleShape2D_pnrqv")

[node name="PlayerCharacter" type="CharacterBody2D" parent="."]
position = Vector2(102, 305)
script = ExtResource("2_pxp0g")
jump_speed = -1100

[node name="Sprite" type="Sprite2D" parent="PlayerCharacter"]
position = Vector2(24, -13)
scale = Vector2(2, 2)
texture = ExtResource("3_qoit2")
hframes = 8
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerCharacter/Sprite"]
root_node = NodePath("../../../PlayerCharacter/Sprite")
libraries = {
"": SubResource("AnimationLibrary_txlgl")
}

[node name="Hitbox" type="CollisionShape2D" parent="PlayerCharacter"]
position = Vector2(27, -19)
shape = SubResource("RectangleShape2D_nrp34")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PlayerCharacter"]
stream = ExtResource("8_g2jou")

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(1068, 337.52)
collision_layer = 4
script = ExtResource("4_g1kf2")

[node name="Sprite" type="Sprite2D" parent="Enemy"]
scale = Vector2(2, 2)
texture = ExtResource("10_37r02")
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy/Sprite"]
libraries = {
"": SubResource("AnimationLibrary_txlgl")
}

[node name="Hitbox" type="CollisionShape2D" parent="Enemy"]
position = Vector2(-1, 6)
shape = SubResource("RectangleShape2D_o7lb6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Enemy"]
stream = ExtResource("9_wcmdw")

[node name="Frog" type="CharacterBody2D" parent="."]
position = Vector2(920, 350)
collision_layer = 2
script = ExtResource("10_is4re")
speed = -250.0

[node name="Sprite" type="Sprite2D" parent="Frog"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("10_ccw57")
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Frog/Sprite"]
libraries = {
"": SubResource("AnimationLibrary_txlgl")
}
speed_scale = 0.75

[node name="Hitbox" type="CollisionShape2D" parent="Frog"]
position = Vector2(-3, 11.5)
shape = SubResource("RectangleShape2D_il8dh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Frog"]
stream = ExtResource("10_kuxtf")
